minor correction to left position of mega menu on mobile display

--- a/wp-content/themes/syncro-blocks/src/scss/global/header.scss
+++ b/wp-content/themes/syncro-blocks/src/scss/global/header.scss
@@ -276,7 +276,9 @@ header.mobile-header-template-part{
             .wp-block-outermost-mega-menu__menu-container{
                 position: relative;
                 height: 0;
-                left: calc( var(--wp--style--root--padding-left) * -1 ) !important;
+                @media (max-width: 1369px){
+                    left: calc( var(--wp--style--root--padding-left) * -1 ) !important;
+                }
                 padding: 0;
                 box-shadow: none;
                 > .wp-block-group{
